# ShippingCouncil

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: __init__.py  agents.yaml  config.yaml  settings.py
src/: cli.py  main.py
src/agents/: __init__.py  base.py
src/agents/backend_dev/: __init__.py  agent.py  prompts.py
src/agents/developer/: __init__.py  agent.py  prompts.py
src/agents/developer/prompts/: __init__.py  system.md
src/agents/developer/prompts/templates/: __init__.py  code_review.md  implement_feature.md
src/agents/devops/: __init__.py  agent.py  prompts.py
src/core/: __init__.py  council.py  task.py
src/integrations/: __init__.py  base.py
src/integrations/discord/: __init__.py  bot.py  handlers.py  multi_bot.py
src/integrations/github/: __init__.py  client.py  operations.py
src/utils/: logging.py
tests/: __init__.py  conftest.py
tests/agents/: test_utils.py
